# Partorium

./: .gitignore  CMakeLists.txt.user 2.8f8edeb  CMakeLists.txt.user.84b5c4f  CMakeLists.txt.user.8f8edeb  CMakeLists.txt.user.dc26b51  main.cpp  mainwindow.h  mainwindow.ui  newpartdialog.ui
assets/icons/: Partorium_Dock.icns
src/: CMakeLists.txt  TODO.md  addstockdialog.cpp  addstockdialog.h  addstockdialog.ui  batchchangedialog.cpp  batchchangedialog.h  batchchangedialog.ui  guiutils.cpp  guiutils.h  importdatadialog.cpp  importdatadialog.h  importdatadialog.ui  jsonpartrepository.cpp  jsonpartrepository.h  listmanagerdialog.cpp  listmanagerdialog.h  listmanagerdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  newpartdialog.cpp  newpartdialog.h  newpartdialog.ui  part.cpp  part.h  removestockdialog.cpp  removestockdialog.h  removestockdialog.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  stockentry.h  stockhistorydialog.cpp  stockhistorydialog.h  stockhistorydialog.ui  stockmanagementrepository.cpp  stockmanagementrepository.h
tmp/pdfs/: partorium_summary.html
